Update for release
2005-03-07  Martin Wehner  <martin.wehner@gmail.com>

	* THANKS:
	Update for release

	* check-THANKS.pl:
	Extract names from ChangeLog bodies too. (#43452)
	Patch from Richard Hoelscher <rah@rahga.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-03-07  Martin Wehner  <martin.wehner@gmail.com>
+
+	* THANKS:
+	Update for release
+	
+	* check-THANKS.pl:
+	Extract names from ChangeLog bodies too. (#43452)
+	Patch from Richard Hoelscher <rah@rahga.com>
+
 2005-03-07  Alexander Larsson  <alexl@redhat.com>
 
 	* NEWS:
