--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,80 @@
 The Nautilus team would like to thank the following contributors:
 
+Nautilus 2.4 - 2.10
+===================
+
+Alan Swanson  <swanson@ukfsn.org>
+Alex Duggan  <aldug@gnome.org>
+Alex Graveley  <alex@ximian.com>
+Alexander Winston  <alexander.winston@comcast.net>
+Anders Carlsson  <andersca@gnome.org>
+Arjan van de Ven  <arjanv@redhat.com>
+Arvind Samptur  <arvind.samptur@wipro.com>
+Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>
+Baris Cicek  <baris@teamforce.name.tr>
+Bastien Nocera  <hadess@hadess.net>
+Bradford Hovinen  <hovinen@ximian.com>
+Chris Lahey  <clahey@ximian.com>
+Christian Neumair  <chris@gnome-de.org>
+Christian Rose  <menthos@menthos.com>
+Christophe Fergeau  <teuf@gnome.org>
+Colin Leroy  <colin@colino.net>
+David Bordoley  <bordoley@msu.edu>
+David Malcolm  <david@davemalcolm.demon.co.uk>
+Dennis Cranston  <dennis_cranston@yahoo.com>
+Dinoop Thomas  <dinoop.thomas@wipro.com>
+Elijah Newren  <newren@gmail.com>
+Federico Mena Quintero  <federico@ximian.com>
+Fernando Herrera  <fherrera@onirica.com>
+Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+Grahame Bowland  <grahame@angrygoats.net>
+Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+Hugo  <nautilus@starbreeze.knoware.nl>
+Iain  <iaingnome@gmail.com>
+Ian Wienand  <ianw@gelato.unsw.edu.au>
+J. Christopher Six  <j.christopher.six@gmail.com>
+Jaap Haitsma  <jaap@haitsma.org>
+James Henstridge  <james@jamesh.id.au>
+James Willcox  <james@ximian.com>
+Jamie  <jamiemcc@blueyonder.co.uk>
+Jason Leach  <leach@wam.umd.edu>
+Jimmy Do  <crispyleaves@gmail.com>
+Jonathan Blandford  <jrb@gnome.org>
+Jorn Baayen  <jbaayen@gnome.org>
+Jürg Billeter  <j@bitron.ch>
+Kaushal Kumar  <kaushal.kumar@wipro.com>
+Luca Ferretti  <elle.uca@libero.it>
+Magnus Damm  <magnus.damm@gmail.com>
+Marco Pesenti Gritti  <marco@gnome.org>
+Mark McLoughlin  <mark@skynet.ie>
+Matthew Gatto  <poobar@nycap.rr.com>
+Mattias Eriksson  <mattias.eriksson@simovits.com>
+Michael Gossard  <michael.gossard@free.fr>
+Michael Henson  <mike@axl.net>
+Murray Cumming  <murrayc@usa.net>
+Nickolay V. Shmyrev <nshmyrev@yandex.ru>
+Padraig O'Briain  <padraig.obriain@sun.com>
+Paolo Borelli  <pborelli@katamail.com>
+Rached Ben Mustapha  <rached@benmur.net>
+Richard Hoelscher <rah@rahga.com>
+Sebastien Bacher  <seb128@debian.org>
+Shaun McCance  <shaunm@gnome.org>
+Sivaiah Nallagatla  <snallagatla@novell.com>
+Soeren Sandmann <sandmann@daimi.au.dk>
+Srinivasa Ragavan  <sragavan@novell.com>
+Stephane Wirtel  <stephane.wirtel@belgacom.net>
+Sven Herzberg  <herzi@gnome-de.org>
+Takao Fujiwar  <takao.fujiwara@sun.com>
+Thierry Moisan <thierryn@videotron.ca>
+Thomas Cataldo  <thomas.cataldo@aliacom.fr>
+Tim Savannah  <opticcow@linux-militia.net>
+Victor I.  <lamer0@lamer0.com>
+Vijaykumar Patwari  <vijaykumar.patwari@wipro.com>
+Vincent Noel  <vincent.noel@gmail.com>
+Vincent Untz  <vincent@vuntz.net>
+William Lachance  <wlach@nit.ca>
+Xan Lopez  <xan@gnome.org>
+
 Nautilus 2.4
 ============
 
@@ -150,68 +225,152 @@ Will LaShell  <will@lashell.net>
 
 As well as the following people who contributed translations:
 
-Abel Cheung  <maddog@linux.org.hk>
+Abel Cheung  <maddog@linuxhall.org>
+Adam Weinberger  <adamw@gnome.org>
+Akagic Amila  <bono@linux.org.ba>
 Akira TAGOH  <tagoh@gnome.gr.jp>
-Alastair McKinstry  <mckinstry@computer.org>
+Alastair McKinstry  <mckinstry@debian.org>
+Ales Nyakhaychyk  <nab@mail.by>
+Alessio Frusciante  <algol@firenze.linux.it>
+Alexander Shopov  <ash@contact.bg>
+Alexander Winston  <alexander.winston@comcast.net>
 Almer S. Tigelaar  <almer@gnome.org>
 Andras Timar  <timar@gnome.hu>
 Andraz Tori  <andraz.tori1@guest.arnes.si>
 Andreas Hyden  <a.hyden@cyberpoint.se>
 Andrew V. Samoilov  <sav@bcs.zp.ua>
+Ankit Patel  <ankit@redhat.com>
+Arafat Medini  <lumina@silverpen.de>
+Artis Trops  <hornet@navigator.lv>
+Artur Flinta  <aflinta@cvs.gnome.org>
+Asmund Skjaeveland  <aasmunds@fys.uio.no>
+Baris Cicek  <baris@teamforce.name.tr>
 Benedikt Roth  <Benedikt.Roth@gmx.net>
 Carlos Perelló Marín  <carlos@hispalinux.es>
+Changwoo Ryu  <cwryu@debian.org>
 Christian Meyer  <chrisime@gnome.org>
+Christian Neumair  <chris@gnome-de.org>
 Christian Rose  <menthos@menthos.com>
 Christophe Merlet  <redfox@redfoxcenter.org>
 Christopher R. Gabriel  <cgabriel@cgabriel.org>
+Dafydd Harries  <daf@muse.19inch.net>
+Daniel Yacob  <locales@geez.org>
+Danilo Segan  <dsegan@gmx.net>
+David Lodge  <dave@cirt.net>
 Dennis Smit  <synap@area101.penguin.nl>
 Dirk-Jan C. Binnema  <dirkjan@gnome.org>
+Dmitry G. Mastrukov  <dmitry@taurussoft.org>
+Duarte Loreto  <happyguy_pt@hotmail.com>
+Dwayne Bailey  <dwayne@translate.org.za>
 Egle Girinaite  <eglyte@centras.lt>
 Emese Kovacs  <emese@gnome.hu>
 Eric Brayeur  <eb@ibelgique.com>
+Evandro Fernandes Giovanini  <evandrofg@ig.com.br>
 Fatih Demir  <kabalak@gmx.net>
+Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+Francisco Javier Fernandez  <cyphra@vir.tecknolabs.com>
+Frank Arnold  <farnold@cvs.gnome.org>
 Frederic Crozat  <fcrozat@mandrakesoft.com>
+Funda Wang  <fundawang@linux.net.cn>
+Gareth Owen  <gowen72@yahoo.com>
 Gaute Hvoslef Kvalnes  <ai98ghk@stud.hib.no>
-Gediminas Paulauskas  <menesis@delfi.lt>
+Gediminas Paulauskas  <menesis@chatsubo.lt>
 George Lebl  <jirka@5z.com>
+German Poo Caamano  <gpoo@ubiobio.cl>
+Gil Osher  <dolfin@rpg.org.il>
 Gong Yi LIAO  <granziliao@sinamail.com>
-Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+Guntupalli Karunakar  <karunakar@freedomink.org>
+Gustavo Maciel Dias Vieira  <gustavo@sagui.org>
+Gustavo Noronha Silva  <kov@debian.org>
 Görkem Cetin  <gorkem@gelecek.com.tr>
+Hasbullah Bin Pit  <sebol@my-penguin.org>
+He Qiangqiang  <carton@linux.net.cn>
+Hendrik Richter  <hendrik@gnome-de.org>
+Inaki Larranaga  <dooteo@euskalgnu.org>
+Ivan Stojmirov  <stojmir@linux.net.mk>
 Jarkko Ranta  <jjranta@cc.joensuu.fi>
+Jayaradna  <njaya@redhat.com>
 Jean-Michel Ardantz  <jmardantz@ifrance.com>
 Jesús Bravo Álvarez  <jba@pobox.com>
+John C Barstow  <jbowtie@amathaine.com>
+Jordi Mallach  <jordi@sindominio.net> - bug fixes
 Jorge Carrasquilla Soares  <jorge@conectiva.com.br>
+KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>
+Kang Jeong-Hee  <Keizi@mail.co.kr>
 Keld Simonsen  <keld@dkuug.dk>
 Kenneth Christiansen  <kenneth@gnu.org>
 Kim Schulz  <kim@schulz.dk>
 Kjartan Maraas  <kmaraas@gnome.org>
 Kjenneth Christiansen  <kenneth@gnu.org>
+Kostas Papadimas  <pkst@gnome.org>
+Laszlo Dvornik  <dvornik@gnome.hu>
+Laurent Dhima  <laurenti@alblinux.net>
+Leonid Kanter  <leon@asplinux.ru>
+Luca Ferretti  <elle.uca@libero.it>
 Mantas Kriauciunas  <mantelis@centras.lt>
+Manuel Borchers  <webmaster@matronix.de>
 Manuel de Vega Barreiro  <barreiro@arrakis.es>
+Marcel Telka  <marcel@telka.sk>
 Marius Andreiana  <mandreiana@yahoo.com>
 Martin Norbäck  <d95mback@dtek.chalmers.se>
+Martin Willemoes Hansen  <mwh@sysrq.dk>
+Mathieu van Woerkom  <mathieu@brabants.org>
 Matthias Warkus  <mawarkus@gnome.org>
+Maxim Dziumanenko  <mvd@mylinux.com.ua>
+Meelad Zakaria  <meelad@bamdad.org>
 Mendel Mobach  <mendel@mobach.nl>
+Metin Amiroff  <metin@karegen.com>
+Michal Bukovjan  <bukm@centrum.cz>
+Miloslav Trmac  <mitr@volny.cz>
+Mohammad DAMT  <mdamt@bisnisweb.com>
+Mugurel Tudor  <mugurelu@go.ro>
+Naba Kumar  <naba@gnome.org>
 Nam SungHyun
+Nikos Charonitakis  <charosn@her.forthnet.gr>
 Ole Laursen  <olau@hardworking.dk>
+Pablo G. del Campo  <pablodc@bigfoot.com>
 Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 Pablo Saratxaga  <pablo@mandrakesoft.com>
-Pauli Virtanen  <pauli.virtanen@saunalahti.fi>
-Peteris Krisjanis  <pecisk@inbox.lv>
+Paisa Seeluangsawat  <paisa@users.sf.net>
+Paul Duffy  <dubhthach@compsoc.nuigalway.ie>
+Pauli Virtanen  <pauli.virtanen@hut.fi>
+Pawan Chitrakar  <pawan@nplinux.org>
+Peteris Krisjanis  <peteris.krisjanis@os.lv>
+Priit Laes  <plaes@cvs.gnome.org>
+Raphael Higino  <raphaelh@cvs.gnome.org>
+Rhys Jones  <rhys@sucs.org>
 Richard Hult  <rhult@hem.passagen.se>
 Robert Brady  <robert@suse.co.uk>
+Robert Sedak  <robert.sedak@sk.htnet.hr>
+Roozbeh Pournader  <roozbeh@sharif.edu>
+Ross Golder  <ross@golder.org>
+Roy-Magne Mo  <rmo@sunnmore.net>
+Runa Bhattacharjee  <runab@redhat.com>
 Sami Pesonen  <spesonen@dlc.fi>
+Samuel Jon Gunnarsson  <sammi@techattack.nu>
+Sanlig Badral  <badral@openmn.org>
 Satoru Sato  <ss@gnome.gr.jp>
+Sayamindu Dasgupta  <sayamindu@clai.net>
+Sebastien Bacher  <seb128@debian.org>
 Simos Xenitellis  <simos@hellug.gr>
+Stanislav Brabec  <sbrabec@suse.cz>
 Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 Szabolcs Ban  <shooby@gnome.hu>
+Takeshi AIHANA  <aihana@gnome.gr.jp>
 Takuo Kitame  <kitame@debian.org>
+Taneem Ahmed  <taneem@bengalinux.org>
+Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
+Tommi Vainikainen  <thv@iki.fi>
+Töivo Leedjärv  <toivo@linux.ee>
 Valek Filippov  <frob@df.ru>
 Valentín Trilles  <vtrilles@yahoo.es>
 Vasif Ismailoglu MD  <azerb_linux@hotmail.com>
 Veeravanallore Madhavan  <vbmadhu@hotmail.com>
+Vincent van Adrighem  <adrighem@gnome.org>
+Vlad Harchev  <hvv@hippo.ru>
 Wang Jian  <lark@linux.net.cn>
 Young-ho, Cha  <ganadist@dacome.co.kr>
 Yukihiro Nakai  <nakai@gnome.gr.jp>
 Yuri Syrota  <rasta@renome.rovno.ua>
 Zbigniew Chyla  <cyba@gnome.pl>
+Zygimantas Berucka  <uid0@akl.lt>
