--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-07  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.10.0 ===
+	
 2005-03-07  Martin Wehner  <martin.wehner@gmail.com>
 
 	* THANKS:
