--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-07  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 === nautilus 2.10.0 ===
 	
 2005-03-07  Mugurel Tudor  <mugurelu@go.ro>
