--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-10  Adi Attar  <aattar@cvs.gnome.org>
+
+	* xh.po: Added Xhosa translation.
+
 2005-03-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation by Supranee Thirawatthanasuk.
