Use GTK_ICON_SIZE_MENU for the location button icon instead of
2005-03-10  Vincent Noel  <vnoel@cox.net>

	* src/nautilus-spatial-window.c:
	(location_button_clicked_callback),
	(nautilus_spatial_window_instance_init): Use GTK_ICON_SIZE_MENU
	for the location button icon instead of GTK_ICON_SIZE_BUTTON
	(#169669).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-03-10  Vincent Noel  <vnoel@cox.net>
+
+	* src/nautilus-spatial-window.c:
+	(location_button_clicked_callback),
+	(nautilus_spatial_window_instance_init): Use GTK_ICON_SIZE_MENU
+	for the location button icon instead of GTK_ICON_SIZE_BUTTON
+	(#169669).
+
 2005-03-10  Adi Attar  <aattar@cvs.gnome.org>
 
 	* configure.in: Added "xh" to ALL_LINGUAS.
