--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-03-12  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/file-manager/fm-actions.h:
+	* src/file-manager/fm-directory-view.c: (real_update_menus):
+	Disable "Select Pattern" for empty folders. (#169817)
+	Patch from Raj <ringuva@novell.com>
+
 2005-03-10  Vincent Noel  <vnoel@cox.net>
 
 	* src/nautilus-spatial-window.c:
