Re-add keybinding to "Show Hidden Files". Patch from Dave Ahlswede
2005-03-12  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c:
	Re-add keybinding to "Show Hidden Files".
	Patch from Dave Ahlswede <mightyquinn@letterboxes.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-03-12  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-directory-view.c:
+	Re-add keybinding to "Show Hidden Files".
+	Patch from Dave Ahlswede <mightyquinn@letterboxes.org>
+
+2005-03-12  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-actions.h:
 	* src/file-manager/fm-directory-view.c: (real_update_menus):
 	Disable "Select Pattern" for empty folders. (#169817)
