--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-14  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2005-03-12  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
