--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-15  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Require gtk 2.6.0
+
 2005-03-12  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
