Updated Persian translation by Behnam Pournader <bp@farsiweb.info>.
2005-03-16  Roozbeh Pournader  <roozbeh@farsiweb.info>

	* fa.po: Updated Persian translation by
	  Behnam Pournader <bp@farsiweb.info>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-16  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: Updated Persian translation by
+	  Behnam Pournader <bp@farsiweb.info>.
+
 2005-03-14  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* da.po: Updated Danish translation.
