--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-17  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-03-16  Roozbeh Pournader  <roozbeh@farsiweb.info>
 
 	* fa.po: Updated Persian translation by
