--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-21  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Fixed wrong translations.
+
 2005-03-17  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
