--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-03-22  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump version to 2.11.1
+	Gnome 2.10 versions are now on the gnome-2-10 branch.
+
+2005-03-22  Alexander Larsson  <alexl@redhat.com>
+
 	* src/nautilus-location-entry.c:
 	Minor cleanup from Jaap Haitsma <jaap@haitsma.org>
 
