Added missing file entry. Updated Swedish translation.
2005-03-22  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Added missing file entry.
	* sv.po: Updated Swedish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-22  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Added missing file entry.
+	* sv.po: Updated Swedish translation.
+
 2005-03-21  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Fixed wrong translations.
