--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-23  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-desktop-window.c:
+	Remove unused code. We avoid flicker in other ways.
+	
 2005-03-22  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
