call gnome_authentication_manager_init to use gnome-vfs auth callbacks.
2005-03-23  Fernando Herrera  <fherrera onirica com>

        * src/nautilus-connect-server-dialog-main.c: (main): call
        gnome_authentication_manager_init to use gnome-vfs auth
        callbacks.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-03-23  Fernando Herrera  <fherrera onirica com>
+
+	* src/nautilus-connect-server-dialog-main.c: (main): call
+	gnome_authentication_manager_init to use gnome-vfs auth 
+	callbacks.
+
 2005-03-23  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-desktop-window.c:
