--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2005-03-25  Martin Wehner  <martin.wehner@gmail.com>
 
+	* libnautilus-private/nautilus-desktop-link-monitor.c:
+	(eject_for_type), (volume_delete_dialog),
+	(nautilus_desktop_link_monitor_delete_link):
+	Reference the proper context menu item in the volume
+	delete dialog of network volumes. Fixes bug #152391.
+	
+	Patch from Dennis Cranston <dennis_cranston@yahoo.com>
+
+2005-03-25  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/file-manager/fm-directory-view.c: (real_merge_menus):
 	Remove hard coded script directory path from tooltip message.
 	Fixes bug #161905.
