Add elipses to "Create Launcher" menu item. (#95113)
2005-03-25  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-desktop-icon-view.c:
	* src/file-manager/fm-directory-view.c:
	Add elipses to "Create Launcher" menu item. (#95113)

	Based on a patch from Christian Neumair <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-03-25  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-desktop-icon-view.c:
+	* src/file-manager/fm-directory-view.c:
+	Add elipses to "Create Launcher" menu item. (#95113)
+	
+	Based on a patch from Christian Neumair <chris@gnome-de.org>
+
+2005-03-25  Martin Wehner  <martin.wehner@gmail.com>
+
 	* libnautilus-private/nautilus-desktop-link-monitor.c:
 	(eject_for_type), (volume_delete_dialog),
 	(nautilus_desktop_link_monitor_delete_link):
