--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-25  Josep Puigdemont  <josep@imatge-sintetica.com>
+
+	* ca.po: Updated Catalan translation.
+
 2005-03-21  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Fixed wrong translations.
