Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2005-03-22  Duarte Loreto <happyguy_pt@hotmail.com>
+2005-03-25  Josep Puigdemont  <josep@imatge-sintetica.com>
+
+	* ca.po: Updated Catalan translation.
+
+2005-03-22  Duarte Loreto  <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
 
