Updated traditional Chinese translation from GNOME HK Team
	* zh_TW.po: Updated traditional Chinese translation from GNOME HK Team

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-28  Abel Cheung  <maddog@linuxhall.org>
+
+	* zh_TW.po: Updated traditional Chinese translation from GNOME HK Team
+
 2005-03-25  Josep Puigdemont  <josep@imatge-sintetica.com>
 
 	* ca.po: Updated Catalan translation.
